support server motd display;