@@ -3,8 +3,10 @@ package net.wheatlauncher;
 import api.launcher.MinecraftServerManager;
 import api.launcher.io.IOGuard;
 import javafx.collections.FXCollections;
+import net.launcher.FXServerInfo;
 import net.launcher.MinecraftServerManagerImpl;
 import net.launcher.game.ServerInfo;
+import net.launcher.game.ServerInfoBase;
 import net.launcher.game.nbt.NBT;
 import net.launcher.game.nbt.NBTCompound;
 import net.launcher.utils.serial.BiSerializer;
@@ -21,7 +23,18 @@ public class IOGuardMinecraftServerManager extends IOGuard<MinecraftServerManage
 	@Override
 	protected void forceSave() throws IOException
 	{
+		MinecraftServerManager instance = getInstance();
+		if (instance == null) return;
+		Path root = getContext().getRoot();
+		BiSerializer<ServerInfo, NBTCompound> serializer = ServerInfoBase.serializer();
+		NBT.write(root.resolve("servers.dat"), NBT.compound().put("servers", NBT.list(instance.getAllServers().stream()
+				.map(serializer::serialize).collect(Collectors.toList()))), false);
+	}
 
+	@Override
+	public void destroy() throws Exception
+	{
+		forceSave();
 	}
 
 	@Override
@@ -30,9 +43,10 @@ public class IOGuardMinecraftServerManager extends IOGuard<MinecraftServerManage
 		Path resolve = getContext().getRoot().resolve("servers.dat");
 		NBTCompound read = NBT.read(resolve, false).asCompound();
 		if (read.isEmpty()) return defaultInstance();
-		BiSerializer<ServerInfo, NBTCompound> serializer = ServerInfo.serializer();
-		return new MinecraftServerManagerImpl(FXCollections.observableArrayList(read.get("servers").asList().stream().map(NBT::asCompound).map(serializer::deserialize).collect(Collectors
-				.toList())));
+		BiSerializer<ServerInfo, NBTCompound> serializer = ServerInfoBase.serializer();
+		return new MinecraftServerManagerImpl(
+				FXCollections.observableArrayList(read.get("servers").asList().stream().map(NBT::asCompound).map(serializer::deserialize)
+						.map(FXServerInfo::new).collect(Collectors.toList())));
 	}
 
 	@Override
